# Revolusi-Moneter-5.0

./: .gitignore  AGENTS.md  README.md  architecture.md  compute_lod.py  contract-map.md  frontend-flow.md  goat-meat-lifecycle.md  hardhat.config.js  integration-bridge.md  lod_data.json  lod_data_base.json  package-lock.json  package.json  user-journey.md
backend/: .env.example  README.md  server.js
contracts/: BarterContract.sol  BarterEngine.sol  GOAT.sol  GoatNFT.sol  GoatNFTBurnHook.sol  GoatNFTWrapper.sol  MEAT.sol  RateHandler.sol  RedeemEngine.sol  SapiNFT.sol  SapiNFTBurnHook.sol  SapiNFTWrapper.sol  SwapConfig.sol
deploy-config/: wasm-config.json
docs/: frontend-pages.md  goat-meat-lifecycle.md  governance-lod-engine.md  index.html  lod-governance.md  styles.css  wasm-deploy.md  whitepaper.html  whitepaper.md
frontend/: .env.example  README.md  package-lock.json  package.json
scripts/: deploy.js  updateCommodityRepresentation.js
test/: RateHandler.test.js  addressSetter.test.js  barter.test.js  barterGoatBeef.test.js  claim.test.js  fullFlow.test.js  goat-extra.test.js  goat.test.js  goatMeatHook.test.js  meat-deploy.test.js  meat-functions.test.js  meat.test.js  meatSubtype.test.js  nftBurnMint.test.js  nftOwner.test.js  nftReentrancy.test.js  rateHandler.test.js  redeemEngine.test.js  sapiMeatHook.test.js  sapiNftBurn.test.js  sapiNftOwner.test.js  sapiWrapper.test.js  (+2 more)
wasm-contracts/goatnft/: Cargo.toml
wasm-contracts/goatnft/src/: lib.rs  msg.rs  state.rs
wasm-contracts/goatnft/tests/: burn.rs  transfer.rs  weight.rs
wasm-contracts/goatnftburnhook/: Cargo.toml
wasm-contracts/goatnftburnhook/src/: lib.rs  state.rs
wasm-contracts/goatnftburnhook/tests/: basic.rs
wasm-contracts/ratehandler/: Cargo.toml
wasm-contracts/ratehandler/src/: lib.rs
wasm-contracts/ratehandler/tests/: basic.rs
wasm-contracts/sapinftwrapper/: Cargo.toml
wasm-contracts/sapinftwrapper/src/: lib.rs  msg.rs  state.rs
wasm-contracts/sapinftwrapper/tests/: wrapper.rs
wasm-contracts/starter/: Cargo.toml
wasm-contracts/starter/src/: lib.rs  msg.rs  state.rs
wasm-contracts/starter/tests/: goat.rs  wrapper.rs
(+55 files in other folders)
