[package]
name = "goatnft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.3"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
cw-storage-plus = "1.1"
cw2 = "1.1"
base64 = "0.21"
serde-json-wasm = "0.5"
cw721 = "0.18"

[dev-dependencies]
cw-multi-test = "0.16"
starter = { path = "../starter" }
