[package]
name = "goatnftburnhook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.3"
cw2 = "1.1"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
cw-storage-plus = "1.1"
meat = { path = "../meat" }

[dev-dependencies]
cw-multi-test = "0.16"
goatnft = { path = "../goatnft" }

